--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,14 +8,13 @@ jobs:
       fail-fast: false
       matrix:
         st-version: [3, 4]
-        os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
-    runs-on: ${{ matrix.os }}
+    runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v2
-      - uses: SublimeText/UnitTesting/actions/setup@v1
+      - uses: SublimeText/UnitTesting/actions/setup@master
         with:
           sublime-text-version: ${{ matrix.st-version }}
-      - uses: SublimeText/UnitTesting/actions/run-tests@v1
+      - uses: SublimeText/UnitTesting/actions/run-tests@master
         with:
           coverage: true
           codecov-upload: true
