--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,13 +8,15 @@ jobs:
       fail-fast: false
       matrix:
         st-version: [3, 4]
-    runs-on: "ubuntu-latest"
+        os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - uses: SublimeText/UnitTesting/actions/setup@master
+      - uses: SublimeText/UnitTesting/actions/setup@v1
         with:
           sublime-text-version: ${{ matrix.st-version }}
-      - uses: SublimeText/UnitTesting/actions/run-tests@master
+      - uses: SublimeText/UnitTesting/actions/run-tests@v1
         with:
           coverage: true
           codecov-upload: true
+      - uses: codecov/codecov-action@v3
