fixed test workflow 9

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,3 +1,27 @@
+# name: test
+
+# on: [push, pull_request]
+
+# jobs:
+#   run-tests:
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         st-version: [3, 4]
+#         os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
+#     runs-on: ${{ matrix.os }}
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: SublimeText/UnitTesting/actions/setup@v1
+#         with:
+#           sublime-text-version: ${{ matrix.st-version }}
+#       - uses: SublimeText/UnitTesting/actions/run-tests@v1
+#         with:
+#           coverage: true
+#           codecov-upload: true
+#       - uses: codecov/codecov-action@v3
+#         env:
+#           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 name: test
 
 on: [push, pull_request]
@@ -7,9 +31,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        st-version: [3, 4]
-        os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
-    runs-on: ${{ matrix.os }}
+        st-version: 4
+    runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v2
       - uses: SublimeText/UnitTesting/actions/setup@v1
