--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: SublimeText/UnitTesting/actions/setup@v1
         with:
-          sublime-text-version: ${{ matrix.st-version }}
+          sublime-text-version: 4
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
         with:
           coverage: true
