fixed test workflow 12

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,13 +31,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        st-version: "4"
+        st-version: [4]
+        os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v2
       - uses: SublimeText/UnitTesting/actions/setup@v1
         with:
-          sublime-text-version: "4"
+          sublime-text-version: ${{ matrix.st-version }}
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
         with:
           coverage: true
