fixed test workflow 14

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,14 +34,12 @@ jobs:
         st-version: [4]
     runs-on: "ubuntu-latest"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: SublimeText/UnitTesting/actions/setup@v1
         with:
           sublime-text-version: ${{ matrix.st-version }}
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
         with:
           coverage: true
-          codecov-upload: true
+          # codecov-upload: true
       - uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
