--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,6 +26,9 @@ name: test
 
 on: [push, pull_request]
 
+env:
+  PACKAGE: PyRock
+
 jobs:
   run-tests:
     strategy:
@@ -38,6 +41,7 @@ jobs:
       - uses: SublimeText/UnitTesting/actions/setup@v1
         with:
           sublime-text-version: ${{ matrix.st-version }}
+          package-name: ${{ env.PACKAGE }}
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
         with:
           coverage: true
