--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        st-version: [4]
+        st-version: [3, 4]
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v3
@@ -44,8 +44,8 @@ jobs:
           package-name: ${{ env.PACKAGE }}
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
         with:
-          coverage: true
-          codecov-upload: true
-      - uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          coverage: ${{ matrix.st-version == 3 }}
+          codecov-upload: ${{ matrix.st-version == 3 }}
+      # - uses: codecov/codecov-action@v3
+      #   env:
+      #     CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
