--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,6 +42,7 @@ jobs:
         with:
           sublime-text-version: ${{ matrix.st-version }}
           package-name: ${{ env.PACKAGE }}
+      - run: sudo apt install at-spi2-core
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
         with:
           coverage: ${{ matrix.st-version == 3 }}
