--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        st-version: [3, 4]
+        st-version: [4]
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v3
