--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,7 +35,8 @@ jobs:
       fail-fast: false
       matrix:
         st-version: [4]
-    runs-on: "ubuntu-latest"
+        os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: SublimeText/UnitTesting/actions/setup@v1
@@ -46,8 +47,8 @@ jobs:
         shell: bash
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
         with:
-          coverage: ${{ matrix.st-version == 3 }}
-          codecov-upload: ${{ matrix.st-version == 3 }}
+          coverage: true
+          codecov-upload: true
       # - uses: codecov/codecov-action@v3
       #   env:
       #     CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
