--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,7 +43,7 @@ jobs:
         with:
           sublime-text-version: ${{ matrix.st-version }}
           package-name: ${{ env.PACKAGE }}
-      - run: pip install coverage
+      # - run: pip install coverage
       # - run: sudo apt install at-spi2-core
       #   shell: bash
       # - run:
