--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,5 @@
 name: test
 
-# on: [push, pull_request]
 on: [push]
 
 env:
@@ -21,7 +20,9 @@ jobs:
           sublime-text-version: ${{ matrix.st-version }}
           package-name: ${{ env.PACKAGE }}
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
-      - uses: codecov/codecov-action@v3
+      - name: Upload Code Coverage
+        if: github.ref == 'refs/heads/master'
+        uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
